# app-scrape-ical

./: ChangeLog.md  README.md  app-scrape-ical.cabal  stack.yaml
app/: Main.hs
src/App/Scrape/: ICal.hs
src/App/Scrape/ICal/: Convert.hs  Exec.hs  Parse.hs
test/App/Scrape/: ICalSpec.hs
test/App/Scrape/ICal/: ParseSpec.hs
test/data/event-checker/: american_fes_yokohama.html  enoshima_2019_2020.html  hosokawa_delta_header.html  ippudo_single_day.html  kameido.html  kfc_lunch.html  pino_maccha.html  sakura_matsuri.html
