name:                   app-scrape-ical
version:                0.1.0.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
-- synopsis:               
-- description:            
-- category:               
cabal-version:          >= 1.10
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md,
                        test/data/event-checker/*.html
-- homepage:               
-- bug-reports:            

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-unused-imports
  -- default-extensions:   
  other-extensions:     OverloadedStrings
  exposed-modules:      App.Scrape.ICal.Parse,
                        App.Scrape.ICal.Convert,
                        App.Scrape.ICal.Exec
  -- other-modules:        
  build-depends:        base,
                        text,
                        time,
                        megaparsec,
                        iCalendar,
                        data-default-class,
                        network-uri,
                        containers,
                        bytestring,
                        http-client

executable app-scrape-ical
  default-language:     Haskell2010
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -Wall -fno-warn-unused-imports
  -- other-modules:        
  -- default-extensions:   
  -- other-extensions:     
  build-depends:        base, app-scrape-ical

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
  main-is:              Spec.hs
  default-extensions:   OverloadedStrings
  -- other-extensions:     
  other-modules:        App.Scrape.ICal.ParseSpec
  build-depends:        base, app-scrape-ical, text, time,
                        hspec

source-repository head
  type:                 git
--  location:             
